k8s/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: automation-project-blue
spec:
  replicas: 4
  selector:
    matchLabels:
      app: automation-project
  template:
    metadata:
      labels:
        app: automation-project
        version: blue
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: node-role.kubernetes.io/master
                operator: DoesNotExist
      containers:
      - name: automation-project-container
        image: devopskarl/automation-project:latest
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
