k8s/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: automation-project-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: automation-project
  template:
    metadata:
      labels:
        app: automation-project
        version: green
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: automation-project-container
          image: devopskarl/automation-project:manual-20251119-054057
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
