k8s/ingress-apisix-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apisix-dashboard-ingress
  namespace: apisix # <-- I-apply ni sa 'apisix' namespace
spec:
  ingressClassName: apisix  # <-- Sultihi si APISIX nga siya ang mo-handle
  rules:
  - host: "apisix.karl.com" # <-- Ang URL
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apisix-dashboard  # <-- Ang service nga iyang i-target
            port:
              number: 80
