k8s/ingress-live.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automation-project-ingress
spec:
  ingressClassName: apisix
  rules:
  - host: "app.karl.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: automation-project-service
            port:
              number: 80
