k8s/ingress-test-green.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-green-ingress
spec:
  ingressClassName: apisix
  rules:
  - host: "test-green.karl.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: automation-project-green-internal
            port:
              number: 80
